cut off text issue

--- a/css/style.css
+++ b/css/style.css
@@ -1564,7 +1564,7 @@ footer{
     line-height: 23px;    
 }
 .fix-testimonial{
-    max-width: 350px;
+    max-width: 390px;
     margin-top: 10px;    
 }
 .map-info-block p{
